--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,18 @@
+ body {margin:0;}
 
+.main .header {
+	text-align:center;
+	pointer-events: none;
+	}
+	
+	
+	#demo{
+  position: relative;
+  background: transparent;
+}
+
+.ytplayer-container {
+  position: absolute;
+  top: 0;
+  z-index: -1;
+}
